@@ -1107,6 +1107,11 @@
                     ; from incoming SIP URI user fields are always truncated at the
                     ; first semicolon.
 
+;send_contact_status_on_update_registration=yes ; Enable sending AMI ContactStatus
+                    ; event when a device refreshes its registration
+                    ; (default: "yes")
+
+
 ; MODULE PROVIDING BELOW SECTION(S): res_pjsip_acl
 ;==========================ACL SECTION OPTIONS=========================
 ;[acl]
